tests/paczka1/fuzzy1/57980213.err
Error in line 2: 2Q1 S37 73,6
Error in line 23: A1 A1 67,9
Error in line 6: sIA9Oo8Ie S37 44,6
Error in line 20: p8ZPrx0 S37 16,4
Error in line 29: A1 A1 338,8
Error in line 24: sIA9Oo8Ie S201 39,5
Error in line 19: 2Q1 S201 2,9
Error in line 32: sIA9Oo8Ie A1 58,3
Error in line 34: 2Q1 S437 87,2
Error in line 35: sIA9Oo8Ie S437 83,7
Error in line 36: 2Q1 S201 65,4
